# tradestation-cli-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  verify-pin.yml
.venv-integration/: pyvenv.cfg
docs/: 00-overview.md  01-project-structure.md  02-auth-and-credentials.md  03-endpoint-inventory.md  04-cli-design.md  05-python-library.md  06-mcp-server.md  07-output-style.md  08-references.md  09-codegen-strategy.md
scripts/: codegen.py  fetch_v3_spec.py  verify_pin.py
src/tradestation/: __init__.py  async_client.py  auth.py  client.py  credentials.py  enums.py  errors.py  streaming.py  transport.py
src/tradestation/_generated/: MANIFEST.txt  __init__.py  models.py  operations.py
src/tradestation/cli/: __init__.py  __main__.py  app.py  ctx.py  prompts.py  render.py  theme.py
src/tradestation/cli/commands/: __init__.py  auth.py  brokerage.py  env.py  market_data.py  order.py
src/tradestation/mcp/: __init__.py  __main__.py  _collect.py  overrides.py  safety.py  server.py  toolsets.py
src/tradestation/mcp/tools/: __init__.py  brokerage.py  market_data.py  order_execution.py
src/tradestation/models/: __init__.py  brokerage.py  common.py  market_data.py  orders.py
src/tradestation/services/: __init__.py  base.py  brokerage.py  market_data.py  order_execution.py
tests/: conftest.py
tests/cli/: conftest.py  test_app_help.py  test_arg_hoisting.py  test_auth_clear.py  test_auth_doctor.py  test_auth_export_login.py  test_auth_refresh.py  test_auth_set.py  test_auth_status.py  test_brokerage_accounts.py  test_command_surface.py  test_ctx_theme.py  test_env_commands.py  test_md_chain.py  test_md_quotes.py  test_prompts.py  test_render.py
tests/integration/: conftest.py  test_live_endpoints.py  test_live_quotes.py
tests/mcp/: conftest.py  test_quotes_tool.py  test_safety.py  test_server_boot.py  test_server_main.py  test_tool_dispatch.py  test_tool_registration.py  test_toolsets.py
tests/unit/: test_auth.py  test_codegen.py  test_credentials.py  test_enums.py  test_generated_models.py  test_pin_verify.py  test_services_brokerage.py  test_services_market_data.py  test_services_order_execution.py  test_smoke.py  test_streaming.py  test_transport.py
