[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "tradestation-cli-mcp"
dynamic = ["version"]
description = "TradeStation v3 Python library + CLI (`ts`) + MCP server (`ts-mcp`)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jonathan", email = "jonathan@getangler.ai" }]
keywords = ["tradestation", "trading", "brokerage", "mcp", "cli", "options", "futures"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed",
]
dependencies = [
  # --- library core ---
  "httpx>=0.27",
  "pydantic>=2.7",
  "cryptography>=42",
  "keyring>=24",
  "anyio>=4",
  "filelock>=3.13",

  # --- CLI ---
  "typer>=0.12",
  "rich>=13.7",
  "click>=8.1",
  "tomli>=2.0; python_version < '3.11'",

  # --- MCP server ---
  "fastmcp>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "pytest-httpx>=0.30",
  "vcrpy>=6",
  "hypothesis>=6.100",
  "respx>=0.21",
  "freezegun>=1.5",
  "python-dotenv>=1",
  "ruff>=0.5",
  "mypy>=1.11",
  "datamodel-code-generator>=0.25,<0.26",
  "pre-commit>=3.7",
]

[project.scripts]
ts = "tradestation.cli.app:main"
ts-mcp = "tradestation.mcp.server:main"

[project.urls]
Homepage = "https://github.com/jonathansudhakar1/tradestation-cli-mcp"
Issues = "https://github.com/jonathansudhakar1/tradestation-cli-mcp/issues"

# ─────────────────────────────────────────────────────────────────────────────
# Hatchling
# ─────────────────────────────────────────────────────────────────────────────
[tool.hatch.version]
path = "src/tradestation/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tradestation"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff (lint + format)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["src/tradestation/_generated"]

[tool.ruff.lint]
select = [
  "E", "F", "W",    # pyflakes/pycodestyle
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # bugbear
  "TID",            # tidy imports (enforces layering)
  "SIM",            # simplify
  "RUF",            # ruff-specific
]
ignore = [
  "E501",           # let ruff format manage line length
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tradestation.cli".msg = "Library code must not depend on the CLI layer."
"tradestation.mcp".msg = "Library code must not depend on the MCP layer."

[tool.ruff.lint.per-file-ignores]
# CLI and MCP packages are allowed to import from tradestation.cli / tradestation.mcp
"src/tradestation/cli/**" = ["TID251"]
"src/tradestation/mcp/**" = ["TID251"]
"tests/**" = ["TID251"]
"scripts/**" = ["TID251"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

# ─────────────────────────────────────────────────────────────────────────────
# Mypy
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/tradestation"]
exclude = ["src/tradestation/_generated"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
no_implicit_reexport = false   # we re-export in __init__.py

[[tool.mypy.overrides]]
module = ["keyring.*", "fastmcp.*", "vcrpy.*", "tomli"]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=tradestation",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
  "live: integration tests that hit the live TradeStation API (requires TS_REFRESH_TOKEN)",
  "slow: tests >1s",
]

[tool.coverage.run]
branch = true
source = ["src/tradestation"]
omit = ["src/tradestation/_generated/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

# ─────────────────────────────────────────────────────────────────────────────
# datamodel-code-generator
# ─────────────────────────────────────────────────────────────────────────────
[tool.datamodel-codegen]
input-file-type = "openapi"
output-model-type = "pydantic_v2.BaseModel"
field-constraints = true
use-annotated = true
use-standard-collections = true
use-union-operator = true
use-double-quotes = true
target-python-version = "3.10"
snake-case-field = true
strict-nullable = true
disable-timestamp = true
